# genomic-hackfest

./: README.md
Azure-Batch/: README.md
Genomic-Storage/: README.md
Genomic-Storage/sources/: CMakeLists.txt  README.md  genomic-storage-main.cpp  genomic-storage.cpp  genomic-storage.h
Identity/: README.md
Identity/etc/: az_defs  az_functions  krb5.template
Lockdown-Environment/: README.md
